[project]
name = "wanseamlessflow"
description = "experimental wanvideo comfyui node with a singular goal - visually seamless transitions between context windows"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/fblissjr/ComfyUI-WanSeamlessFlow"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-WanSeamlessFlow"
Icon = ""
